# DankBot

./: README.md  app.json  bot.py  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
