[tool.poetry]
name = "dankbot"
version = "2.1.0"
description = ""
authors = ["Ishan Manchanda <ishanmanchanda70@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.7"
imageio-ffmpeg = "^0.4.7"
imutils = "^0.5.4"
numba = "^0.53.1"
numpy = "^1.23.0"
opencv-python = "^4.6.0"
Pillow = "^9.2.0"
pyimgur = "^0.6.0"
python-dotenv = "^0.20.0"
python-telegram-bot = "^13.13"
pytz = "^2021.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
