[tool.poetry]
name = "dankbot"
version = "2.1.0"
description = ""
authors = ["Ishan Manchanda <ishanmanchanda70@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.7"
imageio-ffmpeg = "^0.4.7"
imutils = "^0.5.4"
numba = "^0.56.2"
numpy = "^1.23.3"
opencv-python = "^4.6.0"
Pillow = "^9.2.0"
pyimgur = "^0.6.0"
python-dotenv = "^0.21.0"
python-telegram-bot = "^13.14"
pytz = "^2022.4"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
